tests/negative/undefined_var3.sans
// expect-error: undefined variable
main() I {
  foo + bar
}
